docs(perf): record qualification results and CPU throttling blocker